--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
                     <p id="videoDescription">从右侧列表中选择一个视频开始播放。</p>
                 </div>
             </div>
-
+<!-- 在你的网页中嵌入哔哩哔哩直播间 -->
+<div class="live-embed">
+    <h3>正在直播：我的直播间</h3>
+    <!-- 将下方的 src 替换为你的直播间实际分享链接 -->
+    <iframe src="//player.bilibili.com/player.html?aid=&bvid=&cid=&page=1&high_quality=1&danmaku=0"
+            scrolling="no" 
+            border="0" 
+            frameborder="no" 
+            framespacing="0" 
+            allowfullscreen="true"
+            style="width: 100%; height: 500px;">
+    </iframe>
+    <p>欢迎来到我的直播间！直播内容将通过上方播放器实时呈现。</p>
+</div>
             <!-- 视频列表区域 -->
             <div class="playlist-section">
                 <h3><i class="fas fa-list"></i> 视频列表</h3>
@@ -72,19 +85,6 @@
             <p>站主：SMGYH</p>
         </footer>
     </div>
-<!-- 在你的网页中嵌入哔哩哔哩直播间 -->
-<div class="live-embed">
-    <h3>正在直播：我的直播间</h3>
-    <!-- 将下方的 src 替换为你的直播间实际分享链接 -->
-    <iframe src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=30931147&quality=0" frameborder="no"    framespacing="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe>"
-            scrolling="no" 
-            border="0" 
-            frameborder="no" 
-            framespacing="0" 
-            allowfullscreen="true"
-            style="width: 100%; height: 500px;">
-    </iframe>
-    <p>欢迎来到我的直播间！直播内容将通过上方播放器实时呈现。</p>
 </div>
     <!-- 引入外部JavaScript文件 -->
     <script src="script.js"></script>
