--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
                     <p id="videoDescription">从右侧列表中选择一个视频开始播放。</p>
                 </div>
             </div>
+            <!-- 视频列表区域 -->
+            <div class="playlist-section">
+                <h3><i class="fas fa-list"></i> 视频列表</h3>
+                <ul id="videoPlaylist">
+                    <!-- 视频列表将通过JavaScript动态生成 -->
+                    <li class="placeholder">正在加载视频列表...</li>
+                </ul>
+                <div class="hint">
+                    <p><i class="fas fa-info-circle"></i> 提示：所有视频托管于GitHub，首次加载可能需要缓冲。</p>
+                </div>
+            </div>
+
 <div class="live-embed">
     <h3><i class="fas fa-satellite-dish"></i> 正在直播</h3>
     <p>Tim雪地生存100小时（推流bilibili直播）</p>
