--- a/index.html
+++ b/index.html
@@ -53,7 +53,20 @@
     </iframe>
     <p class="live-tip">📡 提示：直播结束后播放器可能显示黑屏。</p>
 </div>
-
+<div class="live-embed">
+    <h3><i class="fas fa-satellite-dish"></i> 正在直播</h3>
+    <p>FNF!!!!!（推流bilibili直播）</p>
+    <!-- 替换为您提供的有效iframe代码 -->
+    <iframe style="width: 700px;height: 400px;"
+            src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=32078085&quality=0"
+            frameborder="no"
+            framespacing="0"
+            scrolling="no"
+            allow="autoplay; encrypted-media"
+            allowfullscreen="true">
+    </iframe>
+    <p class="live-tip">📡 提示：直播结束后播放器可能显示黑屏。</p>
+</div>
             <!-- ===== 新版：GitHub Issues 投稿区域 ===== -->
             <div class="submit-section">
                 <h3><i class="fas fa-cloud-upload-alt"></i> 投稿视频链接</h3>
