--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </section>
         <footer>
             <p>由 GitHub Pages 驱动 | 最后更新于 <span id="currentYear"></span> | <a href="https://github.com/yh143/yh143.github.io/issues" target="_blank">查看所有投稿</a></p>
-            <p>站主：SMGYH</p>
+            <p>站主：夜桦YH    Copyright 2025~2026 Yocas Studio</p>
         </footer>
     </div>
 </div>
